# ltc_to_smpte

./: .gitignore  LICENSE  README.md  generate_test_sample.py  ltc_to_smpte.py  pyproject.toml  requirements.txt  timecode_gui.py
.github/workflows/: build.yml
scripts/: package.py
